"added left and right div container "

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Greg Aspilaire Resume</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="left_side"></div>
+    <div class="right_side"></div>
+  </div>
 </body>
 </html>
